0.9.0/_sources/generated/statsmodels.discrete.count_model.ZeroInflatedGeneralizedPoisson.rst.txt
statsmodels.discrete.count_model.ZeroInflatedGeneralizedPoisson
===============================================================

.. currentmodule:: statsmodels.discrete.count_model

.. autoclass:: ZeroInflatedGeneralizedPoisson

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~ZeroInflatedGeneralizedPoisson.cdf
    
    
      ~ZeroInflatedGeneralizedPoisson.cov_params_func_l1
    
    
      ~ZeroInflatedGeneralizedPoisson.fit
    
    
      ~ZeroInflatedGeneralizedPoisson.fit_regularized
    
    
      ~ZeroInflatedGeneralizedPoisson.from_formula
    
    
      ~ZeroInflatedGeneralizedPoisson.hessian
    
    
      ~ZeroInflatedGeneralizedPoisson.information
    
    
      ~ZeroInflatedGeneralizedPoisson.initialize
    
    
      ~ZeroInflatedGeneralizedPoisson.loglike
    
    
      ~ZeroInflatedGeneralizedPoisson.loglikeobs
    
    
      ~ZeroInflatedGeneralizedPoisson.pdf
    
    
      ~ZeroInflatedGeneralizedPoisson.predict
    
    
      ~ZeroInflatedGeneralizedPoisson.score
    
    
      ~ZeroInflatedGeneralizedPoisson.score_obs
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~ZeroInflatedGeneralizedPoisson.endog_names
      ~ZeroInflatedGeneralizedPoisson.exog_names
   
   