v0.14.0/_sources/generated/statsmodels.discrete.count_model.ZeroInflatedGeneralizedPoisson.rst.txt
statsmodels.discrete.count\_model.ZeroInflatedGeneralizedPoisson
================================================================

.. currentmodule:: statsmodels.discrete.count_model

.. autoclass:: ZeroInflatedGeneralizedPoisson
   :exclude-members: cdf,cov_params_func_l1,fit,fit_regularized,from_formula,get_distribution,hessian,information,initialize,loglike,loglikeobs,pdf,predict,score,score_obs,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~ZeroInflatedGeneralizedPoisson.cdf
      ~ZeroInflatedGeneralizedPoisson.cov_params_func_l1
      ~ZeroInflatedGeneralizedPoisson.fit
      ~ZeroInflatedGeneralizedPoisson.fit_regularized
      ~ZeroInflatedGeneralizedPoisson.from_formula
      ~ZeroInflatedGeneralizedPoisson.get_distribution
      ~ZeroInflatedGeneralizedPoisson.hessian
      ~ZeroInflatedGeneralizedPoisson.information
      ~ZeroInflatedGeneralizedPoisson.initialize
      ~ZeroInflatedGeneralizedPoisson.loglike
      ~ZeroInflatedGeneralizedPoisson.loglikeobs
      ~ZeroInflatedGeneralizedPoisson.pdf
      ~ZeroInflatedGeneralizedPoisson.predict
      ~ZeroInflatedGeneralizedPoisson.score
      ~ZeroInflatedGeneralizedPoisson.score_obs
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~ZeroInflatedGeneralizedPoisson.endog_names
      ~ZeroInflatedGeneralizedPoisson.exog_names
   
   
   